# demo-testing-and-productivity

./: .gitignore  README.md
face_recognition/facerec/: README.md  pyproject.toml
face_recognition/facerec/facerec/: detector.py  face_descriptor.py  finder.py  load_descriptors.py  main.py  recognizer.py  settings.py
face_recognition/facerec/tests/integration/: conftest.py  test_dlib_face_descriptor_computer.py  test_serve.py
face_recognition/facerec/tests/unit/: test_finder.py  test_load_descriptors.py  test_recognizer.py
face_recognition/facerec_client/: pyproject.toml
face_recognition/facerec_client/facerec_client/: image_producer.py  keyboard_handler.py  main.py  opencv_visualizer.py
face_recognition/facerec_client/tests/unit/: test_image_producer.py
face_recognition/facerec_generate_descriptors/: pyproject.toml
face_recognition/facerec_generate_descriptors/facerec_generate_descriptors/: main.py
face_recognition/facerec_pb2s/: pyproject.toml
face_recognition/facerec_pb2s/facerec_pb2s/: facerec_pb2.py  facerec_pb2.pyi  facerec_pb2_grpc.py
face_recognition/protos/: facerec.proto
face_recognition/scripts/: validate_dlib.py
